--- a/app/src/main/res/layout/layout_ingredients.xml
+++ b/app/src/main/res/layout/layout_ingredients.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    style="@style/RecipeCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/RecipeCardView">
+    android:orientation="vertical">
 
     <TextView
+        style="@style/Base.TextAppearance.AppCompat.Headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ingredients_title"
         android:gravity="center"
-        style="@style/Base.TextAppearance.AppCompat.Headline"/>
+        android:text="@string/ingredients_title" />
 
     <TextView
         android:id="@+id/tv_ingredients_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="@string/ingredients_list_placeholder"
-        android:layout_marginLeft="@dimen/vertical_margin"/>
+        android:layout_marginLeft="@dimen/vertical_margin"
+        tools:text="@string/ingredients_list_placeholder" />
 </LinearLayout>
