--- a/app/src/main/res/layout-sw600dp-land/activity_recipe.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_recipe.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe_container"
-    android:tag="tablet-landscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.baker.view.RecipeActivity"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:tag="tablet-landscape"
+    tools:context="com.android.baker.view.RecipeActivity">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <FrameLayout
-        android:id="@+id/fragment_container1"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:orientation="horizontal">
 
-    <FrameLayout
-        android:id="@+id/fragment_container2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"/>
-</LinearLayout>
+        <FrameLayout
+            android:id="@+id/fragment_container1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2" />
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
