--- a/app/src/main/res/layout/layout_recipe_step.xml
+++ b/app/src/main/res/layout/layout_recipe_step.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/RecipeCardView"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    style="@style/RecipeCardView">
+    android:layout_height="100dp">
 
     <ImageView
         android:id="@+id/iv_recipe_step_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/tv_recipe_step"
-        android:gravity="center"
         style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
-        tools:text="@string/recipe_step_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        tools:text="@string/recipe_step_placeholder" />
 </FrameLayout>
